# Website-for-Accounting-Club

./: .gitignore  Gemfile  README.md  _config.yml  about.html  aboutus.html  apply.html  ckdjango.py  homepage.html  index.html  package-lock.json  pyproject.toml  studentapplication.html  styles.css
_data/: navigation.yml
_includes/head/: custom.html
_layouts/: sample_content.html
_posts/: 2022-12-17-welcome-to-jekyll.markdown  2022-12-18-Post2.markdown  2022-12-19-Post3.markdown  2022-12-25-Christmas.markdown
_site/: 404.html  about.html  apply.html  feed.xml  index.html  sitemap.xml
_site/2022/12/17/: welcome-to-jekyll.html
_site/assets/css/: main.css.map
_site/assets/js/lunr/: lunr-store.js
accdjango/: manage.py
accdjango/accdjango/: asgi.py  settings.py  urls.py  wsgi.py
assets/css/: main.scss
html-css-template-drafts/: styles.css
