[tool.poetry] name = "poetryaccountingwebsite" version = "0.1.0" description = "Website for Accounting club" authors = ["Renzo Labajanan"] readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
